Exception handling (#12)
* fix(openapi): update openapi with latest modifications

* fix(openapi): update sample code

* fix(openapi): refactoring searching criteria

* fix: statusDetail -> statusDetails

* feat: add exception handling logic

* fix: add junit tests

* fix: add junit tests for coverage

* fix: refactoring

* fix: code smells